# experiment2

./: .gitignore  configure.ac
src/: Makefile.am  image.cpp  image.h  main.cpp  render.cpp  texture.h  window.cpp  window.h
src/core/: event.cpp  event.h  eventhandler.h  eventsystem.cpp  eventsystem.h  ifile.h  math.h  rectangle.cpp  rectangle.h  textfile.cpp  textfile.h  vector2.cpp  vector3.cpp  vector4.cpp  vector4.h
src/core/events/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  quit.cpp  quit.h
src/game/: game.cpp
src/render/: array.cpp  array.h  drawable.cpp  drawable.h  group.h  image.cpp  node.cpp  node.h  program.cpp  program.h  render.h  sampler.cpp  sampler.h  shader.cpp  shader.h  sprite.cpp  sprite.h  state.cpp  state.h  texture.cpp  uniform.cpp  uniform.h  vbo.cpp  vbo.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h  window.cpp  window.h
src/tests/: test_core.cpp
