lib_LTLIBRARIES=librender.la

librender_la_CXXFLAGS=$(SDL2_CFLAGS) $(OPENGL_CFLAGS)
librender_la_LDFLAGS =$(SDL2_LIBS) $(OPENGL_LIBS)
librender_la_SOURCES =\
	render/window.cpp	\
	render/window.h	\
	render/render.cpp	\
	render/render.h	\
	render/image.cpp	\
	render/image.h		\
	render/image.inl	\
	render/texture.h	\
	render/texture.cpp	\
	render/vector2.h	\
	render/vector2.cpp	\
	render/vector3.h	\
	render/vector3.cpp	\
	render/vector4.h	\
	render/vector4.cpp
